--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div
         class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt transform transition duration-300 group-hover:scale-105 group-hover:shadow-xl flex flex-col h-full">
         <!-- Neon racing border -->
-        <div class="absolute inset-0 pointer-events-none">
+        <div class="absolute inset-0 pointer-events-none -z-10">
           <div
             class="absolute inset-0 rounded-2xl before:content-[''] before:absolute before:inset-0 before:rounded-2xl before:border-4 before:border-transparent before:transition-opacity before:duration-300 before:bg-[conic-gradient(from_0deg,_#f00,_#ff0,_#0f0,_#0ff,_#00f,_#f0f,_#f00)] before:blur-lg before:opacity-0 group-hover:before:opacity-90 before:animate-neon-race">
           </div>
@@ -72,9 +72,9 @@
       <div
         class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt transform transition duration-300 group-hover:scale-105 group-hover:shadow-xl flex flex-col h-full">
         <!-- Neon racing border -->
-        <div class="absolute inset-0 pointer-events-none">
+        <div class="absolute inset-0 pointer-events-none -z-10">
           <div
-            class="absolute inset-0 rounded-2xl before:content-[''] before:absolute before:inset-0 before:rounded-2xl before:border-4 before:border-transparent before:transition-opacity before:duration-300 before:bg-[conic-gradient(from_0deg,_#f00,_#ff0,_#0f0,_#0ff,_#00f,_#f0f,_#f00)] before:blur-lg before:opacity-0 group-hover:before:opacity-90 before:animate-neon-race">
+            class="absolute inset-0 rounded-2xl before:content-[''] before:absolute before:inset-0 before:rounded-2xl before:border-4 before:border-transparent before:transition-opacity before:duration-300 before:bg-[conic-gradient(from_0deg,_#000,_#ff0,_#000,_#ff0)] before:blur-lg before:opacity-0 group-hover:before:opacity-90 before:animate-neon-race">
           </div>
         </div>
         <img src="mcdondal/EvilBorger.png" alt="McDonalds preview" class="w-full h-40 object-cover sm:h-48">
