--- a/index.html
+++ b/index.html
@@ -6,6 +6,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BEHOLD!</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <style>
+    /* tilt effect */
+    .tilt {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    /* card hover: grow everything (halo + rays) */
+    .card-wrapper {
+      position: relative;
+      transition: transform 0.3s ease;
+    }
+
+    .card-wrapper:hover {
+      transform: scale(1.05);
+    }
+
+    .tilt:hover {
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+    }
+
+    /* neon halo behind card */
+    .neon-halo::before {
+      content: '';
+      position: absolute;
+      inset: -1rem;
+      /* bigger than card */
+      border-radius: 1rem;
+      background-size: 400% 400%;
+      filter: blur(3rem);
+      z-index: -10;
+      animation: neon-race 3s linear infinite, neon-pulse 2s ease-in-out infinite;
+      opacity: 0.8;
+    }
+
+    /* small rays around card */
+    .rays::after {
+      content: '';
+      position: absolute;
+      inset: -1.5rem;
+      border-radius: 50%;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 2%, transparent 2%);
+      background-size: 10px 10px;
+      z-index: -5;
+      animation: rays-move 2s infinite linear;
+      pointer-events: none;
+    }
+
+    /* gradients per card */
+    .halo-rainbow::before {
+      background: conic-gradient(from 0deg, #f00, #ff0, #0f0, #0ff, #00f, #f0f, #f00);
+    }
+
+    .halo-yellow-black::before {
+      background: conic-gradient(from 0deg, #000, #ff0, #000, #ff0);
+    }
+
+    .halo-cyan-blue::before {
+      background: conic-gradient(from 0deg, #0ff, #00f, #0ff, #00f);
+    }
+
+    /* keyframes */
+    @keyframes neon-race {
+      0% {
+        background-position: 0% 0%;
+      }
+
+      100% {
+        background-position: 400% 0%;
+      }
+    }
+
+    @keyframes neon-pulse {
+
+      0%,
+      100% {
+        opacity: 0.7;
+      }
+
+      50% {
+        opacity: 1;
+      }
+    }
+
+    @keyframes rays-move {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
 </head>
 
 <body class="bg-gradient-to-br from-gray-50 to-blue-100 font-sans">
@@ -42,15 +136,9 @@
   <section class="max-w-5xl mx-auto px-4 grid gap-6 sm:grid-cols-2 lg:grid-cols-3 justify-items-center">
 
     <!-- String Thing Card -->
-    <a href="particle/particle.html" target="_blank" class="group w-full max-w-[400px]">
-      <div
-        class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt transform transition duration-300 group-hover:scale-105 group-hover:shadow-xl flex flex-col h-full">
-        <!-- Neon racing border -->
-        <div class="absolute inset-0 pointer-events-none -z-10">
-          <div
-            class="absolute inset-0 rounded-2xl before:content-[''] before:absolute before:inset-0 before:rounded-2xl before:border-4 before:border-transparent before:transition-opacity before:duration-300 before:bg-[conic-gradient(from_0deg,_#f00,_#ff0,_#0f0,_#0ff,_#00f,_#f0f,_#f00)] before:blur-lg before:opacity-0 group-hover:before:opacity-90 before:animate-neon-race">
-          </div>
-        </div>
+    <a href="particle/particle.html" target="_blank"
+      class="card-wrapper neon-halo halo-rainbow rays w-full max-w-[400px]">
+      <div class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt flex flex-col h-full">
         <img src="particle/StringThing.png" alt="StringThing preview" class="w-full h-40 object-cover sm:h-48">
         <div class="p-4 flex-1 flex flex-col">
           <h3 class="text-lg font-semibold mb-2">String Thing</h3>
@@ -68,15 +156,9 @@
     </a>
 
     <!-- McDonalds Card -->
-    <a href="mcdondal/mcdonalds.html" target="_blank" class="group w-full max-w-[400px]">
-      <div
-        class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt transform transition duration-300 group-hover:scale-105 group-hover:shadow-xl flex flex-col h-full">
-        <!-- Neon racing border -->
-        <div class="absolute inset-0 pointer-events-none -z-10">
-          <div
-            class="absolute inset-0 rounded-2xl before:content-[''] before:absolute before:inset-0 before:rounded-2xl before:border-4 before:border-transparent before:transition-opacity before:duration-300 before:bg-[conic-gradient(from_0deg,_#000,_#ff0,_#000,_#ff0)] before:blur-lg before:opacity-0 group-hover:before:opacity-90 before:animate-neon-race">
-          </div>
-        </div>
+    <a href="mcdondal/mcdonalds.html" target="_blank"
+      class="card-wrapper neon-halo halo-yellow-black rays w-full max-w-[400px]">
+      <div class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt flex flex-col h-full">
         <img src="mcdondal/EvilBorger.png" alt="McDonalds preview" class="w-full h-40 object-cover sm:h-48">
         <div class="p-4 flex-1 flex flex-col">
           <h3 class="text-lg font-semibold mb-2">McDonanld's Scanner</h3>
@@ -93,9 +175,8 @@
     </a>
 
     <!-- Placeholder Third Card -->
-    <a href="#" target="_blank" class="group w-full max-w-[400px]">
-      <div
-        class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt transform transition duration-300 group-hover:scale-105 group-hover:shadow-xl flex flex-col h-full">
+    <a href="#" target="_blank" class="card-wrapper neon-halo halo-cyan-blue rays w-full max-w-[400px]">
+      <div class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt flex flex-col h-full">
         <img src="https://via.placeholder.com/400x192" alt="Third project" class="w-full h-40 object-cover sm:h-48">
         <div class="p-4 flex-1 flex flex-col">
           <h3 class="text-lg font-semibold mb-2">Coming Soon</h3>
@@ -118,7 +199,6 @@
   </footer>
 
   <!-- Scroll Reveal -->
-  <script src="https://unpkg.com/scrollreveal"></script>
   <script>
     ScrollReveal().reveal('section, .tilt', {
       delay: 100,
