--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
       left: -30px;
       right: -30px;
       bottom: -30px;
+      width: 160%;
+      height: 160%;
       border-radius: 1rem;
-      filter: blur(40px);
+      filter: blur(60px);
       opacity: 0;
-      transition: opacity 0.3s, transform 0.3s;
+      transition: opacity 0.3s, transform 0.6s;
       z-index: -1;
       pointer-events: none;
     }
@@ -59,7 +61,7 @@
     .group:hover .rays::before,
     .group:hover .rays::after {
       opacity: 0.9;
-      transform: scale(1.1);
+      transform: scale(1.3);
     }
 
     /* Neon animation */
@@ -123,6 +125,7 @@
       <div
         class="relative tilt rays flex flex-col h-full bg-white rounded-2xl shadow-md overflow-hidden transition-transform duration-300">
         <div class="halo halo-default"></div>
+        <div class="relative z-10 flex flex-col flex-1">
         <img src="particle/StringThing.png" alt="StringThing preview" class="w-full h-40 object-cover sm:h-48">
         <div class="p-4 flex-1 flex flex-col">
           <h3 class="text-lg font-semibold mb-2">String Thing</h3>
@@ -130,6 +133,7 @@
             An interactive particle animation that responds to your mouse or touch. Do NOT listen to the grateful dead
             while playing with this at work or you may get fired.
           </p>
+        </div>
         </div>
       </div>
     </a>
@@ -139,12 +143,14 @@
       <div
         class="relative tilt rays flex flex-col h-full bg-white rounded-2xl shadow-md overflow-hidden transition-transform duration-300">
         <div class="halo halo-mcd"></div>
+        <div class="relative z-10 flex flex-col flex-1">
         <img src="mcdondal/EvilBorger.png" alt="McDonalds preview" class="w-full h-40 object-cover sm:h-48">
         <div class="p-4 flex-1 flex flex-col">
           <h3 class="text-lg font-semibold mb-2">McDonanld's Scanner</h3>
           <p class="text-gray-600 text-sm sm:text-base flex-1">
             A project for a corporate client - WIP and will be updated regularly.
           </p>
+        </div>
         </div>
       </div>
     </a>
@@ -154,12 +160,14 @@
       <div
         class="relative tilt rays flex flex-col h-full bg-white rounded-2xl shadow-md overflow-hidden transition-transform duration-300">
         <div class="halo halo-default"></div>
+        <div class="relative z-10 flex flex-col flex-1">
         <img src="https://via.placeholder.com/400x192" alt="Third project" class="w-full h-40 object-cover sm:h-48">
         <div class="p-4 flex-1 flex flex-col">
           <h3 class="text-lg font-semibold mb-2">Coming Soon</h3>
           <p class="text-gray-600 text-sm sm:text-base flex-1">
             Another project will be showcased here soon. Stay tuned!
           </p>
+          </div>
         </div>
       </div>
     </a>
