troubleshooting with overflow-hidden removal

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- String Thing Card -->
     <a href="particle/particle.html" target="_blank" class="w-full max-w-[400px] group">
       <div
-        class="relative tilt rays flex flex-col h-full bg-white rounded-2xl shadow-md overflow-hidden transition-transform duration-300">
+        class="relative tilt rays flex flex-col h-full bg-white rounded-2xl shadow-md transition-transform duration-300">
         <div class="halo halo-default"></div>
         <div class="relative z-10 flex flex-col flex-1">
         <img src="particle/StringThing.png" alt="StringThing preview" class="w-full h-40 object-cover sm:h-48">
@@ -141,7 +141,7 @@
     <!-- McDonalds Card -->
     <a href="mcdondal/mcdonalds.html" target="_blank" class="w-full max-w-[400px] group">
       <div
-        class="relative tilt rays flex flex-col h-full bg-white rounded-2xl shadow-md overflow-hidden transition-transform duration-300">
+        class="relative tilt rays flex flex-col h-full bg-white rounded-2xl shadow-md transition-transform duration-300">
         <div class="halo halo-mcd"></div>
         <div class="relative z-10 flex flex-col flex-1">
         <img src="mcdondal/EvilBorger.png" alt="McDonalds preview" class="w-full h-40 object-cover sm:h-48">
@@ -158,7 +158,7 @@
     <!-- Placeholder Third Card -->
     <a href="#" target="_blank" class="w-full max-w-[400px] group">
       <div
-        class="relative tilt rays flex flex-col h-full bg-white rounded-2xl shadow-md overflow-hidden transition-transform duration-300">
+        class="relative tilt rays flex flex-col h-full bg-white rounded-2xl shadow-md transition-transform duration-300">
         <div class="halo halo-default"></div>
         <div class="relative z-10 flex flex-col flex-1">
         <img src="https://via.placeholder.com/400x192" alt="Third project" class="w-full h-40 object-cover sm:h-48">
