i understand why people go insane

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- String Thing Card -->
     <a href="particle/particle.html" target="_blank" class="w-full max-w-[400px] group">
-      <div class="tilt flex flex-col h-full bg-white rounded-2xl shadow-md overflow-hidden">
+      <div class="tilt flex flex-col h-full bg-white rounded-2xl shadow-md">
         <div class="tilt-content flex flex-col">
           <img src="particle/StringThing.png" alt="StringThing preview" class="w-full h-40 object-cover sm:h-48">
           <div class="p-4 flex-1 flex flex-col">
@@ -91,7 +91,7 @@
 
     <!-- McDonalds Card -->
     <a href="mcdondal/mcdonalds.html" target="_blank" class="w-full max-w-[400px] group">
-      <div class="tilt flex flex-col h-full bg-white rounded-2xl shadow-md overflow-hidden">
+      <div class="tilt flex flex-col h-full bg-white rounded-2xl shadow-md">
         <div class="tilt-content flex flex-col">
           <img src="mcdondal/EvilBorger.png" alt="McDonalds preview" class="w-full h-40 object-cover sm:h-48">
           <div class="p-4 flex-1 flex flex-col">
@@ -106,7 +106,7 @@
 
     <!-- Placeholder Third Card -->
     <a href="#" target="_blank" class="w-full max-w-[400px] group">
-      <div class="tilt flex flex-col h-full bg-white rounded-2xl shadow-md overflow-hidden">
+      <div class="tilt flex flex-col h-full bg-white rounded-2xl shadow-md">
         <div class="tilt-content flex flex-col">
           <img src="https://via.placeholder.com/400x192" alt="Third project" class="w-full h-40 object-cover sm:h-48">
           <div class="p-4 flex-1 flex flex-col">
